syntax = "proto3";

option go_package = ".;config";

message Config {
  Server server = 1;
  Mysql mysql = 2;
  Redis redis = 3;
  Consul consul = 4;
  GrpcSrvs grpc_srvs = 5; //@gotags: mapstructure:"grpc_srvs"
  RocketMq rocket_mq = 6; //@gotags: mapstructure:"rocket_mq"
  Tracing tracing = 7;
}

message Server {
  string ip = 1;
  int32 port = 2;

  // 服务名称、标签、出口IP
  string name = 3;
  repeated string tags = 4;
  string external_ip = 5; //@gotags: mapstructure:"external_ip"

  bool debug = 6;
}

message Mysql {
  string addr = 1;
  string user = 2;
  string password = 3;
  string db = 4;
  int32 slow_threshold = 5;
}

message Redis {
  string addr = 1;
  string password = 2;
  int64 db = 3;
}

message Consul {
  message HealthCheck {
    string interval = 1;
    string timeout = 2;
    string deregister = 3;
  }

  string addr = 1;
  HealthCheck health_check = 2; //@gotags: mapstructure:"health_check"
}

message GrpcSrvs {
  string goods_srv_name = 1; //@gotags: mapstructure:"goods_srv_name"
  string stock_srv_name = 2; //@gotags: mapstructure:"stock_srv_name"
}

message RocketMq {
  string name_server = 1; //@gotags: mapstructure:"name_server"
  string producer_group_name = 2; //@gotags: mapstructure:"producer_group_name"
  string consumer_group_name = 3; //@gotags: mapstructure:"consumer_group_name"
  int32 retry = 4;

  // 创建订单时补偿库存的消息, 订单服务 -> 库存服务
  string create_topic = 5; //@gotags: mapstructure:"create_topic"

  // 订单超时消息，订单服务 -> 订单服务
  string delay_topic = 6; //@gotags: mapstructure:"delay_topic"
  int32 delay_level = 7; //@gotags: mapstructure:"delay_level"
}

message Tracing {
  string jaeger_addr = 1; //@gotags: mapstructure:"jaeger_addr"
}